buildspec file added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=admin
 spring.datasource.password=ArushAkarshya
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Show SQL Queries in Terminal
 spring.jpa.show-sql=true
 spring.jpa.hibernate.generate-ddl=true
@@ -24,4 +24,4 @@ springdoc.api-docs.enabled=true
 springdoc.info.title=My Microservice API
 springdoc.info.description=API documentation for my first Microservice.
 springdoc.info.version=1.0.0
-
+datasource.url= http://localhost:8080/bookings
