buildspec file added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ springdoc.info.title=My Microservice API
 springdoc.info.description=API documentation for my first Microservice.
 springdoc.info.version=1.0.0
 datasource.url= http://localhost:8080/bookings
+datasource.url.flight= http://localhost:8080/flights
